fixed carousel alignment issue

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -65,11 +65,11 @@ body {
 }
 
 .product-section > div{
-  font-weight:600;
+  color:white;
   white-space: 2px;
   flex: 0 0 30%;
   box-shadow:0px 1px 5px rgb(118, 3, 3);
-  background-color: rgb(118, 3, 3);
+ background-image: radial-gradient(circle, #a80000, #8c0008, #6f000b, #530008, #380101);
   height:300px;
   padding:10px;
   text-align:center;
@@ -81,13 +81,14 @@ body {
 }
 
 .product-section > div:nth-child(even){
+  font-weight:500;
   color:white;
-  background-color:black;
+ background-image: radial-gradient(circle, #000000, #030303, #060606, #080808, #0b0b0b);
 }
 
 .product-section-title > a {
   text-decoration: none;
-  color:rgb(30, 181, 231);
+  color:white;
 }
 
 .product-section-title > a:hover{
